# POPScomp

./: .gitmodules  CITATION.cff  ChangeLog  Dockerfile  README.md  VERSION  build_DockerImage_onLinux.bash  build_DockerImage_onMac.bash  make_Docker_Linux.bash  make_Docker_Mac.bash  upgrade_POPScomp.bash
.github/workflows/: ccpp.yml  main.yml
Docker/: Dockerfile  README.md  build_DockerImage_onLinux.bash  list_Docker_containers.bash  make_Docker_Linux.bash  make_Docker_Mac.bash  onContainer_1-install_system_packages.bash  onContainer_2-install_R_packages.bash  onImage_1-install_system_packages.bash  onImage_3-compile.bash  pull_POPScomp_Docker_image.bash  push_to_DockerHub.bash  tag_push_Docker_image.bash
DockerImage/: README.md  list_Docker_images.bash  run_POPScomp_Docker_image.bash
FunPDBe/: Makefile  Makefile.debug  Makefile.subdir  Makefile.upload  Makefile.upload.nopass  Makefile.validate  Makefile.weekly  README.md  RUNLOG.md  UPLOADS.md  grep_debugged_structures.bash  pops_XML.R  run_mkpops.bash  run_mkpops1.bash  run_mkpops2.bash  run_mkpops3.bash  run_nullFiles.bash  run_validate.bash
FunPDBe/FunPDBe_correct/: correctJSONfunpdbe.sh  correct_all.bash
FunPDBe/FunPDBe_upload/: README
FunPDBe/FunPDBe_validate/: validateJSONfunpdbe.sh  validate_all.bash
FunPDBe/funpdbe-client/: CHANGELOG.md  Makefile  README.md  funpdbe_client.py  setup.py
FunPDBe/funpdbe-client/funpdbe_client/: client.py  constants.py  control.py  logger_config.py  plugin.py  schema.py  user.py  utils.py
FunPDBe/funpdbe-client/tests/: test_client.py  test_control.py  test_plugin.py  test_schema.py  test_user.py  test_utils.py
FunPDBe/funpdbe-json/: README  funpdbe_client.py  funpdbe_example.json  test_schema.bash
FunPDBe/old.FunPDBe_uploadViaClient/: 1f3r.json  5lff.json  README  uploadJSON.sh
POPSC/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap  config.status  configure  configure.ac  configure~
POPSC/Rgraph/: atomSASA.R  chainSASA.R  residueSASA.R
POPSC/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
POPSC/src/: Makefile  Makefile.am  Makefile.in  arg.c  arg.h  argpdb.h  atomgroup.c  atomgroup.h  atomgroup_data.h  cif_reader.cpp  cif_reader.h  config.h  config.h.in  doxygen.cfg  error.c  error.h  fs.c  fs.h  getmmcif.c  getmmcif.h  getpdb.c  getpdb.h  getpdbml.c  getpdbml.h  gettraj.c  gettraj.h  json.c  json.h  matrix.c  matrix.h  modstring.c  modstring.h  pattern.c  pattern.h  pdb_structure.h  pops  pops.c  pops.h  putCAdistMat.c  putCAdistMat.h  (+25 more)
POPSC/src/.deps/: arg.Po  atomgroup.Po  cJSON.Po  error.Po  fs.Po  getpdb.Po  getpdbml.Po  gettraj.Po  json.Po  matrix.Po  modstring.Po  pattern.Po  pops.Po  putbsasa.Po  putsasa.Po  putsigma.Po  safe.Po  sasa.Po  sigma.Po  topol.Po  type.Po  vector.Po
POPSC/tests/: 1F3R.cif  1aki.sdtraj.gro  1f3r.xml  5lff.xml  Makefile  Makefile.am  Makefile.in  test.xml  test0.sh  test1a.sh  test1b.sh  test1c.sh  test1d.sh  test1e.sh  test2a.sh  test2b.sh  test2c.sh  test2d.sh  test2e.sh  test3a.sh  test3b.sh  test4a.sh  test4b.sh  test5a.sh
POPSR/: DESCRIPTION  NAMESPACE  README.md
POPSR/R/: app.R  plotSASA.R  pops.out.rpopsAtom  pops.out.rpopsChain  pops.out.rpopsMolecule  pops.out.rpopsResidue  popscomp.R  runApp.R  shiny.R
POPSR/Rscript/: 1F3R.cif  popscomp_interface.R  popscomp_standalone.R
POPSR/inst/popsr/: .RData  .Rhistory  app.R  old.app.R  orig.app.R  readme.rds
POPSR/man/: popscomp.Rd
POPSR/script/: popscomp_interface.R  test1.sh
