#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1f3r.pdb \
	1f3r.pdb.gz \
	5lff.xml \
	5lff.xml.gz \
    1aki.pdb\
	1aki.sdtraj.gro \
	host_file

noinst_SCRIPTS = \
	test0.sh \
	test1a.sh \
	test1b.sh \
	test1c.sh \
	test1d.sh \
	test1e.sh \
	test2a.sh \
	test2b.sh \
	test2c.sh \
	test2d.sh \
	test2e.sh \
	test3a.sh \
	test3b.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

