#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1f3r.pdb \
	1f3r.pdb.gz \
	1F3R.cif \
	1F3R.cif.gz \
	5lff.xml \
	5lff.xml.gz \
	5LFF.cif.gz \
	host_file

noinst_SCRIPTS = \
	test0.sh \
	test1a.sh \
	test1b.sh \
	test1c.sh \
	test1d.sh \
	test1e.sh \
	test2a.sh \
	test2b.sh \
	test2c.sh \
	test2d.sh \
	test2e.sh \
	test4a.sh \
	test4b.sh \
	test5a.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

